--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -415,7 +415,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p></p>
+                <p>99 Passback St.</p>
               </div>
 
               <div class="email">
